# dragonbook-frontend

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  rust-project.json
cpp/: .clang-format  BUILD  CMakeLists.txt  main.cpp
cpp/inter/: BUILD  access.hpp  and.cpp  and.hpp  arithmetic-operator.hpp  break.hpp  constant.cpp  constant.hpp  do.hpp  else.hpp  expr_tests.cpp  expression.cpp  expression.hpp  identifier.hpp  if.hpp  logical.cpp  logical.hpp  node.cpp  node.hpp  not.hpp  operator.hpp  or.cpp  or.hpp  relational.cpp  relational.hpp  set-elem.hpp  set.hpp  statement-sequence.cpp  statement-sequence.hpp  statement.cpp  statement.hpp  stmt_tests.cpp  temporary.cpp  temporary.hpp  unary.hpp  while.hpp
cpp/lexer/: BUILD  array.hpp  lexer.cpp  lexer.hpp  lexer_test.cpp  numeric.hpp  token.cpp  token.hpp  type.cpp  type.hpp  word.cpp  word.hpp
cpp/parser/: BUILD  environment.hpp  parser.cpp  parser.hpp  parser_test.cpp
cpp/symbols/: array.hpp  environment.hpp  type.cpp  type.hpp
golang/ast/: BUILD  ast.go  expression.go  expression_test.go  statement.go  statement_test.go
golang/inter/: BUILD  expression.go  expression_test.go  inter.go  statement.go  statement_test.go
golang/lexer/: BUILD  lexer.go  lexer_test.go  tokens.go
golang/main/: BUILD  main.go
golang/parser/: BUILD  parser.go  parser_test.go
java/: BUILD
java/com/dragon/ast/: Access.java  And.java  Arith.java  Break.java  Constant.java  Do.java  Else.java  Expr.java  ExprTests.java  (+16 more)
python/: BUILD  frontend.py
python/dragon/ast/: ast.py  expression.py  statement.py  test_expression.py  test_statement.py
python/dragon/inter/: __init__.py  expression.py  inter.py  statement.py  test_expression.py
python/dragon/lexer/: lexer.py  test_lexer.py  tokens.py
python/dragon/parser/: parser.py  test_parser.py
rust/: BUILD  main.rs
rust/ast/: BUILD
rust/config/: BUILD
rust/inter/: BUILD  expr.rs  expression.rs  inter.rs  statement.rs
rust/lexer/: BUILD  lexer.rs  tokens.rs
rust/parser/: BUILD  parser.rs
src/: CMakeLists.txt  main.cpp
src/inter/: access.hpp  and.cpp  and.hpp  arithmetic-operator.hpp  constant.cpp  constant.hpp  else.hpp  expression.cpp  expression.hpp  identifier.hpp  if.hpp  logical.cpp  logical.hpp  node.cpp  node.hpp  not.hpp  operator.hpp  or.cpp  or.hpp  relational.cpp  relational.hpp  set-elem.hpp  statement-sequence.cpp  statement-sequence.hpp  statement.cpp  temporary.hpp  while.hpp
src/lexer/: lexer.cpp  lexer.hpp  number.hpp  numeric.hpp  real.hpp  token.hpp  word.cpp  word.hpp
src/parser/: parser.cpp  parser.hpp
src/symbols/: array.hpp  environment.hpp  type.cpp  type.hpp
tools/: gopackagesdriver.sh  vscode-settings.json
tools/python/: requirements.txt
tools/python/pytest/: defs.bzl
(+39 files in other folders)
